src/views/components/header/header.scss
@import 'views/styles/shared';


.header {
  padding: 0;
  height: 50px;
  overflow: hidden;
  line-height: 40px;
}

.header-title {
  display: flex;
  align-items: center;

  float: right;
  font-size: rem(14px);
  font-weight: 400;
  line-height: 40px;
  text-rendering: auto;
  transform: translate(0,0);

  &:before {
    display: inline-block;
    border: 2px solid #eb1478;
    margin-right: 8px;
    margin-left: 8px;
    border-radius: 100%;
    height: 16px;
    width: 16px;
    content: ' ';
  }

  a {
    color: black;
    transition: all .2s ease;

    &:hover {
      color: $primary-color;
    }

    &.active {
      color: $primary-color;
      border-bottom: 4px solid $primary-color;
    }
  }
}

.header-actions {
  @include clearfix;
  float: left;
  padding: 8px 0 0 0;
  line-height: 24px;

  li {
    float: left;
    list-style: none;

    &:last-child {
      margin-left: 12px;
      padding-left: 12px;
      border-left: 1px solid #333;
    }

    &:first-child {
      border: none;
    }
  }

  .button {
    display: block;
    margin: 0;
    color: #999;
    font-size: rem(14px);
    line-height: 24px;
  }

  .link {
    display: block;
    fill: #98999a;
    transform: translate(0, 0);
  }

  .link--github {
    padding-top: 1px;
    width: 22px;
    height: 24px;
  }
}

